<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:text="@string/lost_and_found"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCreateItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_advert"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="32dp" />

    <Button
        android:id="@+id/btnShowItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_all_lost_and_found_items"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <Button
        android:id="@+id/btnShowMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_on_map"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

</LinearLayout>
