<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateActivity">

    <TextView
        android:id="@+id/tvPostType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="36dp"
        android:text="@string/post_type"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/rgPostType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgPostType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/tvPostType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPostType"
        app:layout_constraintTop_toTopOf="@+id/tvPostType">

        <RadioButton
            android:id="@+id/rbLost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:text="@string/lost"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/found"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgPostType" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="48dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone"
        android:autofillHints="phone"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="48dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="18sp"
        android:hint="@string/description"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="48dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="18sp"
        android:hint="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragAutocomplete"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDate"/>

    <Button
        android:id="@+id/btnGetLocation"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/get_current_location"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragAutocomplete" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/save"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetLocation" />


</androidx.constraintlayout.widget.ConstraintLayout>